--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,251 +1,172 @@
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap");
-
 :root {
+  --clr-accent-400: hsl(12, 88%, 59%);
+  --clr-accent-100: hsl(13, 100%, 96%);
+
+  --clr-primary-400: hsl(228, 39%, 23%);
+
+  --clr-neutral-100: hsl(232, 12%, 13%);
+  --clr-neutral-900: hsl(0 0% 0%);
+
   --ff-primary: "Be Vietnam Pro", sans-serif;
 
-  --clr-primary-BR: hsl(12, 88%, 59%);
-  --clr-primary-DB: hsl(228, 39%, 23%);
-
-  --clr-neutral-DGB: hsl(227, 12%, 61%);
-  --clr-neutral-VDB: hsl(233, 12%, 13%);
-  --clr-neutral-VPR: hsl(13, 100%, 96%);
-  --clr-netutral-VLG: hsl(0, 0%, 98%);
-  --clr-neutral-button-text: rgba(252, 246, 245, 1);
+  --ff-body: var(--ff-primary);
+  --ff-heading: var(--ff-primary);
 
   --fw-regular: 400;
   --fw-semi-bold: 500;
   --fw-bold: 700;
 
-  --fs-400: 1rem;
-  --fs-500: 1.8rem;
-  --fs-600: 2.5rem;
-  --fs-700: 3.5rem;
+  --fs-300: 0.8125rem;
+  --fs-400: 0.875rem;
+  --fs-500: 0.9375rem;
+  --fs-600: 1rem;
+  --fs-700: 1.875rem;
+  --fs-800: 2.5rem;
+  --fs-900: 3.5rem;
 
-  --primary-heading: var(--fs-600);
-  --secondary-heading: var(--fs-500);
-  --third-heading: var(--fs-400);
-
-  --primary-nav: var(--fs-400);
-
-  --primary-body: var(--fs-400);
-
-  --padding-20: 20px;
+  --fs-body: var(--fs-400);
+  --fs-primary-heading: var(--fs-800);
+  --fs-secondary-heading: var(--fs-700);
+  --fs-nav: var(--fs-500);
+  --fs-button: var(--fs-300);
 }
 
-body {
-  font-size: var(--primary-body);
+@media (min-width: 50em) {
+  :root {
+    --fs-body: var(--fs-500);
+    --fs-primary-heading: var(--fs-900);
+    --fs-secondary-heading: var(--fs-800);
+
+    --fs-nav: var(--fs-300);
+  }
 }
 
-.primary-heading {
-  font-size: var(--primary-heading);
-}
-
-.secondary-heading {
-  font-size: var(--secondary-heading);
-}
-
-.fw-bold {
-  font-weight: var(--fw-bold);
-}
-
+/* Box sizing rules */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
-/*
-  2. Remove default margin
-*/
+
+/* Remove default margin */
 * {
   margin: 0;
   padding: 0;
   font: inherit;
 }
-/*
-  3. Allow percentage-based heights in the application
-*/
-html,
-body {
-  height: 100%;
-  margin: 10px;
-}
-/*
-  Typographic tweaks!
-  4. Add accessible line-height
-  5. Improve text rendering
-*/
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-/*
-  6. Improve media defaults
-*/
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
-/*
-  7. Remove built-in form typography styles
-*/
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-/*
-  8. Avoid text overflows
-*/
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
-}
-/*
-  9. Create a root stacking context
-*/
-#root,
-#__next {
-  isolation: isolate;
-}
 
-.content {
-  overflow-x: hidden;
-}
-
-h2 {
-  font-size: var(--secondary-heading);
-}
-
-h1 {
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-p {
-  mix-blend-mode: normal;
-  opacity: 0.5;
-  line-height: 28px;
-  font-weight: var(--fw-regular);
-}
-
-.navbar__container {
-  height: 100px;
-}
-
-.navbar__menu {
-  font-size: var(--primary-nav);
-  display: none;
-}
-
-.navbar__hamburger {
-  display: block;
-}
-
-.nav_get_started {
-  display: none;
-}
-
-.button {
-  border-radius: 22px;
-  border: none;
-  width: 137px;
-  height: 44px;
-  background-color: var(--clr-primary-BR);
-}
-
-.link-text {
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
   list-style: none;
-  text-decoration: none;
-  color: var(--clr-neutral-button-text);
 }
 
-.carousel {
-  display: flex;
-  scroll-snap-type: x mandatory;
-  overflow-x: scroll;
+/* Set core root defaults */
+html:focus-within {
   scroll-behavior: smooth;
 }
 
-.carousel__item {
-  width: 200px;
-  height: 400px;
-  width: 100%;
-  flex-shrink: 0;
-  scroll-snap-align: start;
+html,
+body {
+  height: 100%;
 }
 
-.carousel__button-container {
-  height: 50px;
-  width: 200px;
-  gap: 5px;
+/* Set core body defaults */
+body {
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
 }
 
-.carousel__button {
-  background-color: var(--clr-primary-BR);
-  border: 1px solid var(--clr-primary-BR);
-  border-radius: 3.5px;
-  width: 7px;
-  height: 7px;
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
 }
 
-.image__blob {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: auto;
-  height: 400px;
-  z-index: -1;
+/* Make images easier to work with */
+img,
+picture,
+svg {
+  max-width: 100%;
+  display: block;
 }
 
-.image__blob_two {
-  position: absolute;
-  right: 0;
-  top: 50;
-  width: auto;
-  height: 200px;
-  z-index: -1;
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
 
-.data-image {
-  width: auto;
-  height: auto;
+/* Utility classes */
+
+.text-primary-400 {
+  color: var(--clr-primary-400);
+}
+.text-accent-400 {
+  color: var(--clr-accent-400);
+}
+.text-accent-100 {
+  color: var(--clr-accent-100);
+}
+.text-neutral-100 {
+  color: var(--clr-neutral-100);
+}
+.text-neutral-900 {
+  color: var(--clr-neutral-900);
 }
 
-@media (min-width: 600px) {
-  :root {
-    --primary-heading: var(--fs-700);
-    --secondary-heading: var(--fs-600);
-  }
+.bg-primary-400 {
+  background-color: var(--clr-primary-400);
+}
+.bg-accent-400 {
+  background-color: var(--clr-accent-400);
+}
+.bg-accent-100 {
+  background-color: var(--clr-accent-100);
+}
+.bg-neutral-100 {
+  background-color: var(--clr-neutral-100);
+}
+.bg-neutral-900 {
+  background-color: var(--clr-neutral-900);
+}
 
-  .navbar__menu {
-    font-size: var(--primary-nav);
-    display: flex;
-  }
+.fw-bold {
+  font-weight: var(--fw-bold);
+}
+.fw-semi-bold {
+  font-weight: var(--fw-semi-bold);
+}
+.fw-regular {
+  font-weight: var(--fw-regular);
+}
 
-  .navbar__menu > li > a {
-    text-decoration: none;
-    color: black;
-  }
+.fs-primary-heading {
+  font-size: var(--fs-primary-heading);
+}
+.fs-secondary-heading {
+  font-size: var(--fs-secondary-heading);
+}
 
-  .navbar__menu > li {
-    list-style: none;
-    padding: 20px;
-  }
-
-  .navbar__hamburger {
-    display: none;
-  }
-
-  .nav_get_started {
-    display: block;
-  }
+.fs-300 {
+  font-size: var(--fs-300);
+}
+.fs-400 {
+  font-size: var(--fs-400);
+}
+.fs-500 {
+  font-size: var(--fs-500);
+}
+.fs-600 {
+  font-size: var(--fs-600);
 }
