--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap");
 :root {
+  --clr-accent-500: hsl(12, 60%, 45%);
   --clr-accent-400: hsl(12, 88%, 59%);
+  --clr-accent-300: hsl(12, 88%, 75%);
   --clr-accent-100: hsl(13, 100%, 96%);
 
   --clr-primary-400: hsl(228, 39%, 23%);
@@ -30,6 +32,16 @@
   --fs-secondary-heading: var(--fs-700);
   --fs-nav: var(--fs-500);
   --fs-button: var(--fs-300);
+
+  --size-100: 0.25rem;
+  --size-200: 0.5rem;
+  --size-300: 0.75rem;
+  --size-400: 1rem;
+  --size-500: 1.5rem;
+  --size-600: 2rem;
+  --size-700: 3rem;
+  --size-800: 4rem;
+  --size-900: 5rem;
 }
 
 @media (min-width: 50em) {
@@ -153,9 +165,11 @@ svg {
 
 .fs-primary-heading {
   font-size: var(--fs-primary-heading);
+  line-height: 1.2;
 }
 .fs-secondary-heading {
   font-size: var(--fs-secondary-heading);
+  line-height: 1.2;
 }
 
 .fs-300 {
@@ -171,4 +185,69 @@ svg {
   font-size: var(--fs-600);
 }
 
+.padding-block-900 {
+  padding-block: var(--size-900);
+}
+
+.padding-block-700 {
+  padding-block: var(--size-700);
+}
+
+.container {
+  --max-width: 1110px;
+  --padding: 1rem;
+  /* auto margins^^ */
+
+  width: min(var(--max-width), 100% - (var(--padding) * 2));
+  margin-inline: auto;
+}
+
+.even-columns {
+  display: grid;
+  gap: 1rem;
+}
+
+@media (min-width: 50em) {
+  .even-columns {
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+  }
+}
+
 /* general styling */
+
+body {
+  font-style: var(--fs-body);
+  font-family: var(--ff-body);
+  color: var(--clr-primary-400);
+}
+
+.button {
+  border-radius: 100vmax;
+  text-decoration: none;
+  padding: 1.5em 2.5em;
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-button);
+  border: 0;
+  padding: 1em 2.5em;
+  color: var(--clr-neutral-100);
+  background-color: var(--clr-accent-400);
+  box-shadow: 0 1.25em 1em -1em var(--clr-accent-400);
+}
+
+.button[data-type="inverted"] {
+  color: var(--clr-accent-400);
+  background-color: var(--clr-neutral-100);
+  line-height: 1;
+}
+
+.button[data-type="inverted"]:hover,
+.button[data-type="inverted"]:focus-visible {
+  color: var(--clr-accent-300);
+  background-color: var(--clr-neutral-100);
+}
+
+.button:hover,
+.button:hover:focus-visible {
+  background-color: var(--clr-accent-300);
+}
